--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       type="image/png"
       href="%PUBLIC_URL%/images/circle logo.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- <meta
