--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="The First Sound" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://thefirstsound.netlify.app/" />
+    <meta
+      property="og:description"
+      content="Welcome to The First Sound! A zine to celebrate Hatsune Miku and her most iconic songs, releasing on Miku Day (March 9th)."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/images/circle logo.png" />
     <!-- <meta
       name="description"
       content="Web site created using create-react-app"
