--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://thefirstsound.netlify.app/" />
     <meta
       property="og:description"
-      content="Welcome to The First Sound! A zine to celebrate Hatsune Miku and her most iconic songs, releasing on Miku Day (March 9th)."
+      content="Welcome to The First Sound! A zine to celebrate Hatsune Miku and her classic songs, releasing on Miku Day (March 9th)."
     />
     <meta property="og:image" content="%PUBLIC_URL%/images/circle logo.png" />
     <!-- <meta
